Improve and unify __repr__ format for PyGObject, PyGBoxed and PyGIStruct

Includes the module, Python type name, pointer and wrapper pointer
and GType name. e.g.
"<Gtk.Border object at 0x7f26bee9e4c8 (GtkBorder at 0x1c72e30)>"

In case of PyGObjects created from GType set the module to __gi__
instead of guessing the old static binding name. Also
remove the code that tries to add them to the guessed static bindings
module while at it. The __repr__ will now return
"<__gi__.X11Keymap ..." instead of "<gtk.gdk.X11Keymap ..."

https://bugzilla.gnome.org/show_bug.cgi?id=657915